--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
         <div class="packages-grid">
           <article class="package">
             <header><h3>Basic</h3><div class="tag">לאירועים קטנים</div></header>
-            <ul><li>שעתיים צילום</li><li>עמדת מגנטים מעוצבת</li><li>עד 150 מגנטים</li><li>מסגרת מותאמת</li></ul>
+            <ul><li>3 שעות צילום</li><li>צלם אחד</li><li>עד 200 מגנטים</li><li>מסגרת מותאמת</li></ul>
             <a class="btn primary" href="#contact" data-plan="Basic">לבירור מחיר</a>
           </article>
           <article class="package">
             <header><h3>Pro</h3><div class="tag">רוב האירועים</div></header>
-            <ul><li>4 שעות צילום</li><li>צלם + עוזר צלם</li><li>עד 300 מגנטים</li><li>2 עיצובים למסגרות</li></ul>
+            <ul><li>4.5 שעות צילום</li><li>צלם + עוזר צלם</li><li>עד 400 מגנטים</li><li>עמדת מגנטים מעוצבת</li></ul>
             <a class="btn primary" href="#contact" data-plan="Pro">לבירור מחיר</a>
           </article>
           <article class="package">
             <header><h3>VIP</h3><div class="tag">מתאים לחתונות ואירועים גדולים</div></header>
-            <ul><li>5 שעות צילום</li><li>צלם + עוזר צלם</li><li>עד 500 מגנטים</li><li>גלריה דיגיטלית ממותגת</li></ul>
+            <ul><li>עד סוף האירוע</li><li>צלם + עוזר צלם</li><li>מגנטים ללא הגבלה</li><li>גלריה דיגיטלית ממותגת</li></ul>
             <a class="btn primary" href="#contact" data-plan="VIP">לבירור מחיר</a>
           </article>
         </div>
