--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a class="btn primary" href="#contact" data-plan="Pro">לבירור מחיר</a>
           </article>
           <article class="package">
-            <header><h3>VIP</h3><div class="tag">מתאים לחתונות ואירועים גדולים</div></header>
+            <header><h3>VIP</h3><div class="tag">מתאים לאירועים גדולים</div></header>
             <ul><li>עד סוף האירוע</li><li>צלם + עוזר צלם</li><li>מגנטים ללא הגבלה</li><li>גלריה דיגיטלית ממותגת</li></ul>
             <a class="btn primary" href="#contact" data-plan="VIP">לבירור מחיר</a>
           </article>
