--- a/index.html
+++ b/index.html
@@ -103,29 +103,32 @@
     <section id="gallery" class="section">
       <div class="container">
         <h2>גלריה</h2>
-        <div class="cat-wrap" style="position:static;top:auto;">
-          <div class="cat-inner">
-            <button class="chip active" data-cat="all">הכול</button>
-            <button class="chip" data-cat="wedding">חתונות</button>
-            <button class="chip" data-cat="bm">בר/בת מצווה</button>
-            <button class="chip" data-cat="corporate">אירועי חברה</button>
+        <!-- Carousel (4-up, infinite) -->
+        <div class="carousel" role="region" aria-label="גלריית תמונות" dir="rtl" tabindex="0">
+          <button class="car-arrow left" aria-label="תמונות קודמות" type="button">‹</button>
+
+          <div class="car-viewport">
+            <div class="car-track">
+              <!-- הדבק כאן את התמונות שלך (כל Button = תמונה אחת). אפשר עד ~50, מציג רק מה שקיים -->
+              <button class="g-item" type="button">
+                <img src="gallery_01.PNG" alt="גלריה 1" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_02.PNG" alt="גלריה 2" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_03.PNG" alt="גלריה 3" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_04.PNG" alt="גלריה 4" loading="lazy" decoding="async">
+              </button>
+              <!-- הוסף/הסר לפי הצורך: gallery_05.PNG ... gallery_50.PNG -->
+            </div>
           </div>
+
+          <button class="car-arrow right" aria-label="תמונות הבאות" type="button">›</button>
         </div>
-        <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"><img src="gallery_01.PNG" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_02.PNG" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_03.PNG" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_04.PNG" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_05.PNG" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_06.PNG" alt="גלריה 6"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_07.PNG" alt="גלריה 7"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_08.PNG" alt="גלריה 8"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_09.PNG" alt="גלריה 9"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_10.PNG" alt="גלריה 10"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_11.PNG" alt="גלריה 11"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_12.PNG" alt="גלריה 12"></button>
-        </div>
-      </div>
+
     </section>
 
     <section id="contact" class="section">
@@ -180,5 +183,15 @@
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
   <script src="script.js?v=navfix2?v=510" defer defer></script>
+
+  <!-- Lightbox Modal -->
+<div class="lightbox" role="dialog" aria-modal="true" aria-label="תצוגת תמונה מוגדלת" hidden>
+  <button class="lb-close" aria-label="סגירה" type="button">✕</button>
+  <button class="lb-prev" aria-label="תמונה קודמת" type="button">‹</button>
+  <div class="lb-stage">
+    <img class="lb-img" alt="תמונה מוגדלת" decoding="async">
+  </div>
+  <button class="lb-next" aria-label="תמונה הבאה" type="button">›</button>
+</div>
 </body>
 </html>
