--- a/index.html
+++ b/index.html
@@ -120,7 +120,28 @@
                 <img src="gallery_03.PNG" alt="גלריה 3" loading="lazy" decoding="async">
               </button>
               <button class="g-item" type="button">
-                <img src="gallery_04.PNG" alt="גלריה 4" loading="lazy" decoding="async">
+                <img src="gallery_05.PNG" alt="גלריה 5" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_06.PNG" alt="גלריה 6" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_07.PNG" alt="גלריה 7" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_08.PNG" alt="גלריה 8" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_09.PNG" alt="גלריה 9" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_10.PNG" alt="גלריה 10" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_11.PNG" alt="גלריה 11" loading="lazy" decoding="async">
+              </button>
+              <button class="g-item" type="button">
+                <img src="gallery_12.PNG" alt="גלריה 12" loading="lazy" decoding="async">
               </button>
               <!-- הוסף/הסר לפי הצורך: gallery_05.PNG ... gallery_50.PNG -->
             </div>
@@ -182,7 +203,7 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=navfix2?v=510" defer defer></script>
+  <script src="script.js?v=531" defer defer></script>
 
   <!-- Lightbox Modal -->
 <div class="lightbox" role="dialog" aria-modal="true" aria-label="תצוגת תמונה מוגדלת" hidden>
