--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
           <button class="car-arrow right" aria-label="תמונות הבאות" type="button">›</button>
         </div>
-
+      </div>
     </section>
 
     <section id="contact" class="section">
